--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -8,5 +8,6 @@ h2 {
 
 p {
   font-family: 'Raleway', sans-serif;
+  margin-bottom: 0;
 }
 
